# rocket-starterapp

./: Cargo.toml  README.md  Rocket.example.toml  example.env
email_templates/: odd-registration-attempt.html  password-was-reset.html  reset-password.html  verify-account.html  welcome.html
migrations/: 20201104205425_accounts.sql  20220325090000_identities.sql  20220418090000_queue.sql
src/: auth.rs  database.rs  email.rs  error.rs  forms.rs  jobs.rs  lib.rs  main.rs  models.rs  oauth.rs  passwords.rs  response.rs  routes.rs  session.rs  token.rs
src/email/: common.rs  mock.rs  postmark.rs  sendgrid.rs  smtp.rs
src/jobs/: odd_registration_attempt.rs  reset_password.rs  verify.rs  welcome.rs
src/oauth/: client.rs
src/routes/: accounts.rs  home.rs  oauth.rs
templates/: 404.html.tera  index.html.tera  macros.html.tera
templates/accounts/: invalid_token.html.tera  login.html.tera  register.html.tera
templates/accounts/resend_link/: index.html.tera  requested.html.tera
templates/accounts/reset_password/: change_password.html.tera  index.html.tera
templates/accounts/verify/: failure.html.tera  index.html.tera
templates/dashboard/: index.html.tera  layout.html.tera
templates/oauth/: confirm.html.tera  login.html.tera
